--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -81,7 +81,7 @@ button,
 input[type="submit"] {
   padding: 0.5em 1em;
   background: var(--gold);
-  border: 0.125rem solid var(--gold-dark);
+  border: none;
   box-shadow: 0;
   border-radius: 0.25rem;
 }
